--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@faker-js/faker": "^7.6.0",
     "@quasar/extras": "^1.0.0",
     "@vueuse/rxjs": "^9.13.0",
+    "pinia": "^2.0.33",
     "quasar": "^2.6.0",
     "rxdb": "^14.2.1",
     "vue": "^3.0.0",
